--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cidr"
-version = "0.1.0"
-authors = ["Daniel YU <leptonyu@gmail.com>"]
+version = "0.1.1"
+authors = ["Daniel Yu <leptonyu@gmail.com>"]
 description = "IP network and IP host within network types"
 edition = "2018"
 homepage = "https://github.com/leptonyu/rust-cidr"
@@ -11,12 +11,11 @@ readme = "README.md"
 license = "MIT"
 
 [dependencies]
-regex = "1.4.3"
-lazy_static = "1.4.0"
+regex = "1"
+lazy_static = "1"
 md5="0.7"
 
 [dev-dependencies]
-clap = "3.0.0-beta.2"
-quickcheck = "1.0.3"
+salak = "0.2"
+quickcheck = "1"
 quickcheck_macros ="1"
-actix-web = "3"
