--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,6 @@ lazy_static = "1"
 md5="0.7"
 
 [dev-dependencies]
-salak = { version = "0.6.1",  features = ["enable_clap"]}
+salak = { version = "0.7.0",  features = ["enable_pico"]}
 quickcheck = "1"
 quickcheck_macros ="1"
